--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "@babel/runtime-corejs3": "^7.5.5",
+    "@wordpress/block-editor": "^3.1.0",
+    "@wordpress/block-library": "^2.8.0",
+    "@wordpress/blocks": "^6.6.0",
+    "@wordpress/components": "^8.2.0",
+    "@wordpress/compose": "^3.6.0",
+    "@wordpress/editor": "^9.6.0",
+    "@wordpress/element": "^2.7.0",
+    "@wordpress/format-library": "^1.8.0",
     "@wordpress/hooks": "^2.3.0",
+    "@wordpress/i18n": "^3.6.0",
     "backbone": "1.3.3",
     "backbone.marionette": "3.2.0",
     "backbone.radio": "2.0.0",
