--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@wordpress/blocks": "^6.6.0",
     "@wordpress/components": "^8.2.0",
     "@wordpress/compose": "^3.6.0",
+    "@wordpress/data": "^4.8.0",
     "@wordpress/editor": "^9.6.0",
     "@wordpress/element": "^2.7.0",
     "@wordpress/format-library": "^1.8.0",
